@@ -3,12 +3,13 @@ package de.claudioaltamura.java.java17.sealed.classes;
 class GreetService {
 
     String greet(Person person) {
-        if(person.gender() instanceof Male) {
-            return "Mr. " + person.name();
-        } else if (person.gender() instanceof Female) {
-            return "Mrs. " + person.name();
-        } else {
-            throw new RuntimeException("unknown instance of " + person.gender());
-        }
+        // --enable-preview
+        var salutation = switch(person.gender()) {
+            case Male m -> "Mr.";
+            case Female f -> "Mrs.";
+            default -> throw new RuntimeException("unknown instance of " + person.gender());
+        };
+
+        return salutation + " " + person.name();
     }
 }
